--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h1 class="heading"> Menu</h1>
             <div class="shop" id="shop">
                 <div class="item">
-                    <img src="./images/item1.webp" alt="">
+                    <img src="item1.webp" alt="">
                     <div class="desc">
                         <h3>Americano</h3>
                         <p>12₹</p> 
@@ -81,7 +81,7 @@
                 </div>
                 <!--item-2-->
                 <div class="item">
-                    <img src="./images/item2.avif" alt="">
+                    <img src="item2.avif" alt="">
                     <div class="desc">
                         <h3>Cappuccino</h3>
                         <p>12₹</p> 
@@ -97,7 +97,7 @@
                 </div>
                  <!--item-3-->
                 <div class="item">
-                    <img src="./images/item3.jpg" alt="">
+                    <img src="item3.jpg" alt="">
                     <div class="desc">
                         <h3>Latte</h3>
                         <p>12₹</p> 
@@ -113,7 +113,7 @@
                 </div>
                  <!--item-4-->
                 <div class="item">
-                    <img src="./images/item4.jpg" alt="">
+                    <img src="item4.jpg" alt="">
                     <div class="desc">
                         <h3>Macchiato</h3>
                         <p>12₹</p> 
@@ -129,7 +129,7 @@
                 </div>
                  <!--item-5-->
                 <div class="item">
-                    <img src="./images/item5.webp" alt="">
+                    <img src="item5.webp" alt="">
                     <div class="desc">
                         <h3>Espresso</h3>
                         <p>12₹</p> 
@@ -145,7 +145,7 @@
                 </div>
                  <!--item-6-->
                 <div class="item">
-                    <img src="./images/item6.jpeg" alt="">
+                    <img src="item6.jpeg" alt="">
                     <div class="desc">
                         <h3>Flat White</h3>
                         <p>12₹</p> 
@@ -161,7 +161,7 @@
                 </div>
                  <!--item-7-->
                 <div class="item">
-                    <img src="./images/item7.jpeg" alt="">
+                    <img src="item7.jpeg" alt="">
                     <div class="desc">
                         <h3>Cold brew</h3>
                         <p>12₹</p>
@@ -177,7 +177,7 @@
                 </div>
                  <!--item-8-->
                 <div class="item">
-                    <img src="./images/item8.jpeg" alt="">
+                    <img src="item8.jpeg" alt="">
                     <div class="desc">
                         <h3>Black coffee</h3>
                         <p>12₹</p> 
@@ -198,7 +198,7 @@
             <p class="heading">Order Now</p>
             <div class="orderitem">
                 <div class="orderimg">
-                    <img src="./images/order.jpg" alt="">
+                    <img src="order.jpg" alt="">
                 </div>
                 <div class="information">
                     <div class="info">
@@ -217,12 +217,12 @@
         <p class="heading">Download Our App</p>
         <div class="app" id="app">
             <div class="images">
-                <img src="./images/girl.avif" alt="" class="girl">
+                <img src="girl.avif" alt="" class="girl">
             </div>
             <div class="rating">
                 <p class="para">"Experience the ultimate coffee lover's paradise with Coffee House! Rated 4.3 stars, this app brings you a delightful blend of convenience and quality, offering a wide range of premium coffee selections. From rich espressos to creamy lattes, indulge in your favorite brews at your fingertips. Download now and elevate your coffee experience!"  </p>
                 <div class="rate">
-                    <img src="./images/app.png" alt="" class="applogo">
+                    <img src="app.png" alt="" class="applogo">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -239,7 +239,7 @@
                 <div class="cards">
                     <!--card-1-->
                     <div class="card">
-                        <img src="./images/card1.jpg" alt="">
+                        <img src="card1.jpg" alt="">
                         <h2>Jassy</h2>
                         <div class="rate items-rate">
                             <i class="fa-solid fa-star"></i>
@@ -255,7 +255,7 @@
                     </div>
                     <!--card-2-->
                     <div class="card">
-                        <img src="./images/card2.avif" alt="">
+                        <img src="card2.avif" alt="">
                         <h2>Michel</h2>
                         <div class="rate items-rate">
                             <i class="fa-solid fa-star"></i>
@@ -270,7 +270,7 @@
                     </div>
                     <!--card-3-->
                     <div class="card">
-                        <img src="./images/card3.jpg" alt="">
+                        <img src="card3.jpg" alt="">
                         <h2>Sahana</h2>
                         <div class="rate items-rate">
                             <i class="fa-solid fa-star"></i>
@@ -286,7 +286,7 @@
                     </div>
                     <!--card-4-->
                     <div class="card">
-                        <img src="./images/card4.webp" alt="">
+                        <img src="card4.webp" alt="">
                         <h2>Venky</h2>
                         <div class="rate items-rate">
                             <i class="fa-solid fa-star"></i>
