--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label for="check" id="checkbtn">
                 <i class="fa-solid fa-bars icon" ></i>
             </label>
-            <a href="#" class="logo"><img src="./images/logo.webp" alt=""></a>
+            <a href="#" class="logo"><img src="logo.webp" alt=""></a>
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -43,7 +43,7 @@
         <div class="about" id="about">
             <p class="heading border">About</p>
             <div class="sub-content">
-                <img src="./images/about.jpg" alt="">
+                <img src="about.jpg" alt="">
                 <p class="para"> <span>The Success Story of Coffee House Café</span><br><br>
 
                 In the year 2022, a visionary named Mr. Venkateswarlu embarked on a journey to bring the joy of coffee to the people of India. Thus, Coffee House Café was born, a haven for coffee lovers seeking delightful brews and warm ambiance. What started as a humble venture soon blossomed into a nationwide sensation, captivating hearts and taste buds across the country.
