--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
    <main>
     <div class="content">
         <div class="home" id="home">
+            <img src="bg.webp" style="background_image">
             <h1 class="head">Coffee House</h1>
             <p class="quote">Be a coffee to others <br>reliever of stress, <br>And make their mood fresh!</p>
         </div>
